routes updated. validation improved
