# routes/person.js
@@ -1,9 +1,7 @@
 const express = require('express') // Імпортуємо модуль Express
 const router = express.Router() // Створюємо екземпляр маршрутизатора
 const personController = require('../controllers/personController') // Імпортуємо контролер для обробки операцій, пов'язаних з особами
-const {
-	createPersonValidation
-} = require('../middleware/requestPersonValidation') // Middleware для валідації запитів: Імпортуємо для валідації запитів за допомогою Express Validator
+const personValidation = require('../middleware/personValidation') // Middleware для валідації запитів: Імпортуємо для валідації запитів за допомогою Express Validator
 const { validationResult } = require('express-validator') // Імпортуємо validationResult для обробки результатів валідації
 const logger = require('../middleware/logger') // Імпортуємо логер Winston
 
@@ -21,7 +19,6 @@ router.use((req, res, next) => {
 router.use((req, res, next) => {
 	const oldWrite = res.write
 	const oldEnd = res.end
-
 	const chunks = []
 
 	res.write = (...restArgs) => {
@@ -45,89 +42,104 @@ router.use((req, res, next) => {
 	next() // Передача управління наступному middleware
 })
 
-// Маршрут для створення нової особи
+/// Маршрут для створення нової особи
 router.post(
 	'/',
-	createPersonValidation, // Використання middleware для валідації запиту
+	personValidation.createPerson, // Використання middleware для валідації запиту
 	(req, res, next) => {
 		// #swagger.summary = 'create Person'
 		// #swagger.tags = ['Person Service']
-		// #swagger.description = 'Route to create a new person. It uses request validation middleware (createPersonValidation) to validate the request body. If there are validation errors, it logs them and returns a 422 status with the validation errors. Otherwise, it delegates the creation operation to the createPerson controller function.'
-		logger.info('Creating person attempt') // Логування спроби створення особи
+		// #swagger.description = 'Route to create a new person. It uses request validation middleware to validate the request body. If there are validation errors, it logs them and returns a 422 status with the validation errors. Otherwise, it delegates the creation operation to the createPerson controller function.'
+		// #swagger.responses[500] = { description: 'Internal Server Error' }
+		logger.info('Attempt to create person')
 		const errors = validationResult(req)
 		if (!errors.isEmpty()) {
-			logger.warn(`Validation error: ${JSON.stringify(errors.array())}`)
-			// 422 дає більш точний опис проблеми як помилки валідації семантичних даних, тоді як 400 є загальним кодом для будь-яких помилок у запиті.
-			return res.status(422).json({ Validation_errors: errors.array() }) // Повернення помилок валідації
+			const errorMessages = errors
+				.array()
+				.map(error => {
+					return `Field: ${error.path}, Value: ${error.value}, Message: ${error.msg}`
+				})
+				.join(' | ')
+			logger.warn(`Validation error: ${errorMessages}`)
+			// Статус 422 надає більш точний опис проблеми, ніж статус 400, який використовується для загальних помилок у запиті.
+			return res.status(422).json(`Помилки валідації: ${errorMessages}`) // Повернення помилок валідації
 		}
-		next() // Передача управління наступному middleware
-	},
-	personController.createPerson // Виклик функції контролера для створення особи
+		personController.createPerson(req, res, next) // Виклик функції контролера для створення особи
+	}
 )
-
-// Маршрут для отримання списку осіб за запитами
+// Маршрут для отримання списку осіб
 router.get(
 	'/',
+	personValidation.getPersons, // Використання middleware для валідації запиту
 	(req, res, next) => {
 		// #swagger.summary = 'get Persons By Query Parameters'
 		// #swagger.tags = ['Person Service']
-		// #swagger.description = 'Route to get a list of persons by query parameters.Example '/person?_page=1&_limit=50&name=Adam' Delegates the operation to the getPersonsByQueryParameters controller function.'
-		logger.info('Getting list of persons by query parameters') // Логування спроби отримання списку осіб за запитами
-		next() // Передача управління наступному middleware
-	},
-	personController.getPersonsByQueryParameters // Виклик функції контролера для отримання списку осіб за запитами
-)
-
-// Маршрут для отримання особи за унікальним атрибутом
-router.get(
-	'/:attribute/:value',
-	(req, res, next) => {
-		// #swagger.summary = 'get Person By Unique Attribute'
-		// #swagger.tags = ['Person Service']
-		// #swagger.description = 'Route to get a person by unique attribute like unzr,rnokpp,passportNumber or id. Delegates the operation to the getPersonByUniqueAttribute controller function.'
-		logger.info(`Getting person by ${req.params.attribute} ${req.params.value}`) // Логування спроби отримання особи за унікальним атрибутом
-		next() // Передача управління наступному middleware
-	},
-	personController.getPersonByUniqueAttribute // Виклик функції контролера для отримання особи за унікальним атрибутом
-)
-
-// Маршрут для оновлення особи за унікальним атрибутом
-router.put(
-	'/:attribute/:value',
-	createPersonValidation, // Використання middleware для валідації запиту
-	(req, res, next) => {
-		// #swagger.summary = 'update Person By Unique Attribute'
-		// #swagger.tags = ['Person Service']
-		// #swagger.description = 'Route to update a person by unique attribute like unzr,rnokpp,passportNumber or id. It also uses request validation middleware (updatePersonValidation) to validate the request body. If there are validation errors, it logs them and returns a 422 status with the validation errors. Otherwise, it delegates the update operation to the updatePersonByUniqueAttribute controller function.'
-		logger.info('Updating person attempt') // Логування спроби оновлення особи
+		// #swagger.description = 'Route to get a list of persons by query parameters.Example '/person?_page=1&_limit=50&name=Adam' It also uses request validation middleware to validate the request query. If there are validation errors, it logs them and returns a 422 status with the validation errors.  Delegates the operation to the getPersons controller function.'
+		// #swagger.responses[500] = { description: 'Internal Server Error' }
+		logger.info('Attempt to get persons') // Логування спроби отримання списку осіб
 		const errors = validationResult(req)
 		if (!errors.isEmpty()) {
-			logger.warn(`Validation error: ${JSON.stringify(errors.array())}`)
-			return res.status(422).json({ Validation_errors: errors.array() }) // Повернення помилок валідації
+			const errorMessages = errors
+				.array()
+				.map(error => {
+					return `Field: ${error.path}, Value: ${error.value}, Message: ${error.msg}`
+				})
+				.join(' | ')
+			logger.warn(`Validation error: ${errorMessages}`)
+			return res.status(422).json(`Помилки валідації: ${errorMessages}`) // Повернення помилок валідації
 		}
-		next() // Передача управління наступному middleware
-	},
-	(req, res, next) => {
-		logger.info(
-			`Updating person by ${req.params.attribute} ${req.params.value}` // Логування оновлення особи за унікальним атрибутом
-		)
-		next() // Передача управління наступному middleware
-	},
-	personController.updatePersonByUniqueAttribute // Виклик функції контролера для оновлення особи за унікальним атрибутом
+		personController.getPersons(req, res, next) // Виклик функції контролера для отримання списку осіб
+	}
 )
-// Маршрут для видалення особи за унікальним атрибутом
-router.delete(
-	'/:attribute/:value',
+
+// Маршрут для оновлення осіб
+router.put(
+	'/',
+	personValidation.updatePersons, // Використання middleware для валідації запиту
 	(req, res, next) => {
-		// #swagger.summary = 'delete Person By Unique Attribute'
+		// #swagger.summary = 'update Persons By Attribute'
 		// #swagger.tags = ['Person Service']
-		// #swagger.description = 'Route to delete a person by unique attribute like unzr,rnokpp,passportNumber or id. Delegates the operation to the deletePersonByUniqueAttribute controller function.'
-		logger.info(
-			`Deleting person by ${req.params.attribute} ${req.params.value}` // Логування спроби видалення особи за унікальним атрибутом
-		)
-		next() // Передача управління наступному middleware
-	},
-	personController.deletePersonByUniqueAttribute // Виклик функції контролера для видалення особи за унікальним атрибутом
+		// #swagger.description = 'Route to update persons by attribute. It also uses request validation middleware to validate the request body. If there are validation errors, it logs them and returns a 422 status with the validation errors. Otherwise, it delegates the update operation to the  updatePersons controller function.'
+		// #swagger.responses[500] = { description: 'Internal Server Error' }
+		logger.info('Atempt to update persons') // Логування спроби оновлення особи
+		const errors = validationResult(req)
+		if (!errors.isEmpty()) {
+			const errorMessages = errors
+				.array()
+				.map(error => {
+					return `Field: ${error.path}, Value: ${error.value}, Message: ${error.msg}`
+				})
+				.join(' | ')
+			logger.warn(`Validation error: ${errorMessages}`)
+			return res.status(422).json(`Помилки валідації: ${errorMessages}`) // Повернення помилок валідації
+		}
+		personController.updatePersons(req, res, next) // Виклик функції контролера для оновлення особіб за атрибутом
+	}
+)
+
+// Маршрут для видалення осіб
+router.delete(
+	'/',
+	personValidation.deletePersons, // Використання middleware для валідації запиту
+	(req, res, next) => {
+		// #swagger.summary = 'delete Persons By Attribute'
+		// #swagger.tags = ['Person Service']
+		// #swagger.description = 'Route to delete persons by attribute. It also uses request validation middleware to validate the request query. If there are validation errors, it logs them and returns a 422 status with the validation errors. Otherwise, it delegates the operation to the deletePersons controller function.'
+		// #swagger.responses[500] = { description: 'Internal Server Error' }
+		logger.info(`Attempt to delete persons`) // Логування спроби видалення осіб
+		const errors = validationResult(req)
+		if (!errors.isEmpty()) {
+			const errorMessages = errors
+				.array()
+				.map(error => {
+					return `Field: ${error.path}, Value: ${error.value}, Message: ${error.msg}`
+				})
+				.join(' | ')
+			logger.warn(`Validation error: ${errorMessages}`)
+			return res.status(422).json(`Помилки валідації: ${errorMessages}`) // Повернення помилок валідації
+		}
+		personController.deletePersons(req, res, next) // Виклик функції контролера для видалення осіб
+	}
 )
 
 module.exports = router // Експортуємо маршрутизатор для використання в інших файлах
